Lower reversible AOT result slots